--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git@github.com:Gimly-Blockchain/antelope-did-resolver.git"
+    "url": "git@github.com/Tonomy-Foundation/antelope-did-resolver.git"
   },
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
