--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   },
   "scripts": {
     "start": "tsdx watch",
-    "build": "tsdx build",
+    "build": "tsdx build --transpileOnly",
     "test": "tsdx test",
     "lint": "tsdx lint",
-    "prepare": "tsdx build",
+    "prepare": "tsdx build --transpileOnly",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
@@ -60,8 +60,8 @@
     "@types/elliptic": "^6.4.12",
     "@types/node-fetch": "^2.5.10",
     "asn1.js": "^5.4.1",
-    "did-resolver": "^3.1.0",
     "husky": "^6.0.0",
+    "did-resolver": "file:../did-resolver",
     "node-fetch": "^2.6.1",
     "size-limit": "^4.10.2",
     "tsdx": "^0.14.1",
