--- a/package.json
+++ b/package.json
@@ -10,8 +10,25 @@
     "ssi",
     "resolver"
   ],
+  "type": "module",
+  "source": "src/index.ts",
+  "main": "./build/index.cjs",
+  "module": "./build/index.module.js",
+  "unpkg": "./build/index.umd.js",
+  "types": "./build/types/index.d.ts",
+  "umd:main": "./build/index.umd.js",
+  "exports": {
+    ".": {
+      "types": "./build/types/index.d.ts",
+      "require": "./build/index.cjs",
+      "import": "./build/index.module.js"
+    }
+  },
   "publishConfig": {
     "access": "public"
+  },
+  "engines": {
+    "node": ">=10"
   },
   "repository": {
     "type": "git",
@@ -23,13 +40,11 @@
     "antelope-did-chain-registry.json"
   ],
   "scripts": {
-    "start": "tsdx watch",
-    "build": "tsdx build --transpileOnly",
-    "test": "tsdx test",
-    "lint": "tsdx lint",
-    "prepare": "tsdx build --transpileOnly",
-    "size": "size-limit",
-    "analyze": "size-limit --why"
+    "start": "microbundle watch",
+    "build": "microbundle --compress=false",
+    "test": "jest",
+    "lint": "eslint src test",
+    "prepare": "npm run build"
   },
   "contributors": [
     "Jack Tanner <jack@tonomy.foundation>",
@@ -39,14 +54,21 @@
     "@size-limit/preset-small-lib": "^4.12.0",
     "@tonomy/did-resolver": "^4.0.4",
     "@types/elliptic": "^6.4.14",
+    "@types/jest": "^29.5.1",
     "@types/node-fetch": "^2.6.4",
     "asn1.js": "^5.4.1",
     "base64url": "^3.0.1",
     "eosjs": "^21.0.4",
-    "husky": "^6.0.0",
+    "eslint": "^8.41.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.5.0",
+    "microbundle": "^0.15.1",
     "node-fetch": "^2.6.11",
-    "size-limit": "^4.10.2",
-    "tsdx": "^0.14.1",
+    "prettier": "^2.8.8",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "tslib": "^2.5.2",
     "typescript": "^4.9.5"
   },
