--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "start": "microbundle watch",
     "build": "microbundle --compress=false",
     "test": "jest",
-    "lint": "eslint src test",
+    "lint": "eslint src test --ext .ts --resolve-plugins-relative-to .",
+    "lint:fix": "npm run lint -- --fix",
     "prepare": "npm run build"
   },
   "contributors": [
@@ -56,6 +57,7 @@
     "@types/elliptic": "^6.4.14",
     "@types/jest": "^29.5.1",
     "@types/node-fetch": "^2.6.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
     "asn1.js": "^5.4.1",
     "base64url": "^3.0.1",
     "eosjs": "^21.0.4",
