--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "test": "jest",
     "lint": "eslint src test --ext .ts --resolve-plugins-relative-to .",
     "lint:fix": "npm run lint -- --fix",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "release": "semantic-release  --debug"
   },
   "contributors": [
     "Jack Tanner <jack@tonomy.foundation>",
