--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "Rebal Alhaqash <rebal@tonomy.foundation>"
   ],
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@size-limit/preset-small-lib": "^4.12.0",
     "@tonomy/did-resolver": "^4.0.4",
     "@types/elliptic": "^6.4.14",
@@ -61,7 +63,6 @@
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "asn1.js": "^5.4.1",
     "base64url": "^3.0.1",
-    "eosjs": "^21.0.4",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.1",
@@ -70,6 +71,7 @@
     "microbundle": "^0.15.1",
     "node-fetch": "^2.6.11",
     "prettier": "^2.8.8",
+    "semantic-release": "^21.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.2",
@@ -77,6 +79,6 @@
   },
   "dependencies": {
     "base64url": "^3.0.1",
-    "eosjs": "^21.0.4"
+    "eosjs": "^22.1.0"
   }
 }
