--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com/Tonomy-Foundation/antelope-did-resolver.git"
+    "url": "https://github.com/Tonomy-Foundation/antelope-did-resolver"
   },
   "files": [
     "build",
