--- a/.releaserc
+++ b/.releaserc
@@ -28,7 +28,7 @@
           "package.json",
           "package-lock.json"
         ],
-        "message": "chore(release): ${nextRelease.version}"
+        "message": "chore(release): ${nextRelease.version} [skip ci]"
       }
     ],
     "@semantic-release/github"
