--- a/package.json
+++ b/package.json
@@ -55,14 +55,12 @@
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@size-limit/preset-small-lib": "^4.12.0",
     "@tonomy/did-resolver": "^4.0.4",
     "@types/elliptic": "^6.4.14",
     "@types/jest": "^29.5.1",
     "@types/node-fetch": "^2.6.4",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "asn1.js": "^5.4.1",
-    "base64url": "^3.0.1",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jest": "^27.2.1",
@@ -78,7 +76,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "base64url": "^3.0.1",
-    "eosjs": "^21.0.4"
+    "eosjs": "^21.0.4",
+    "uint8arrays": "^4.0.3"
   }
 }
