--- a/package.json
+++ b/package.json
@@ -46,16 +46,18 @@
     "lint": "eslint src test --ext .ts --resolve-plugins-relative-to .",
     "lint:fix": "npm run lint -- --fix",
     "prepare": "npm run build",
-    "release": "semantic-release  --debug"
+    "release": "semantic-release --debug"
   },
   "contributors": [
     "Jack Tanner <jack@tonomy.foundation>",
     "Rebal Alhaqash <rebal@tonomy.foundation>"
   ],
   "devDependencies": {
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-typescript": "^7.21.5",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@tonomy/did-resolver": "^4.0.4",
     "@types/elliptic": "^6.4.14",
     "@types/jest": "^29.5.1",
     "@types/node-fetch": "^2.6.4",
@@ -76,6 +78,8 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@tonomy/did-resolver": "^4.0.4",
+    "base64url": "^3.0.1",
     "eosjs": "^21.0.4",
     "uint8arrays": "^4.0.3"
   }
