--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "@semantic-release/git": "^10.0.1",
     "@types/elliptic": "^6.4.14",
     "@types/jest": "^29.5.1",
-    "@types/node-fetch": "^2.6.4",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
     "asn1.js": "^5.4.1",
     "eslint": "^8.41.0",
@@ -69,7 +68,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "microbundle": "^0.15.1",
-    "node-fetch": "^2.6.11",
     "prettier": "^2.8.8",
     "semantic-release": "^21.0.2",
     "ts-jest": "^29.1.0",
@@ -78,8 +76,9 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@greymass/eosio": "^0.7.0",
     "@tonomy/did-resolver": "^4.0.4",
-    "eosjs": "^21.0.4",
+    "cross-fetch": "^3.1.6",
     "uint8arrays": "^4.0.3"
   }
 }
