--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,6 +13,5 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.12.1
-      - run: npm ci
-      - run: npm run build
-      - run: npm run test
+      - run: yarn install
+      - run: yarn run test
