--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
   },
   "dependencies": {
     "@greymass/eosio": "^0.7.0",
-    "@tonomy/did-resolver": "^4.0.4",
     "cross-fetch": "^3.1.6",
+    "did-resolver": "^4.1.0",
     "uint8arrays": "^4.0.3"
   }
 }
