--- a/package.json
+++ b/package.json
@@ -77,6 +77,6 @@
     "@greymass/eosio": "^0.7.0",
     "cross-fetch": "^3.1.6",
     "did-resolver": "^4.1.0",
-    "uint8arrays": "^4.0.3"
+    "uint8arrays": "3.1.1"
   }
 }
