--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@greymass/eosio": "^0.7.0",
+    "@wharfkit/antelope": "^0.7.1",
     "cross-fetch": "^3.1.6",
     "did-resolver": "^4.1.0",
     "uint8arrays": "3.1.1"
