--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,14 +20,14 @@ jobs:
       - name: 📦 Install
         uses: actions/setup-node@v3
         with:
-          node-version: 18.12.1
+          node-version: 20.9.0
           registry-url: https://registry.npmjs.org/
 
       - name: 🚀 Build and publish SDK
         uses: actions/setup-node@v3
         with:
-          node-version: 18.12.1
-      - run: yarn install
+          node-version: 20.9.0
+      - run: yarn install --immutable
       - run: yarn run release
         env:
           GITHUB_TOKEN: ${{secrets.MY_GITHUB_PERSONAL_ACCESS_TOKEN}}
